--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
+    "@mui/types": "^7.2.14",
     "@reduxjs/toolkit": "^2.2.3",
     "date-fns": "^3.6.0",
     "facepaint": "^1.2.1",
@@ -31,6 +32,7 @@
     "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
+    "@maskito/react": "^2.3.0",
     "@types/facepaint": "^1.2.5",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
